--- a/elements/pfe-collapse/src/pfe-collapse-panel.scss
+++ b/elements/pfe-collapse/src/pfe-collapse-panel.scss
@@ -1,16 +1,11 @@
 :host {
-  display: none;
-  overflow: hidden;
-  will-change: height;
+  @include pfe-collapsible(closed);
 }
 
-:host([expanded]),
 :host([expanded]) {
-  display: block;
-  position: relative;
+  @include pfe-collapsible(open);
 }
 
 :host(.animating) {
   display: block;
-  transition: height 0.3s ease-in-out;
 }
